--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -206,7 +206,7 @@
 					<li><a th:href="@{/materialrequisition/approval}"><i class="fa fa-circle-o"></i>
 							Material Requisition Approval</a></li>
 							
-					<li><a th:href="@{/issuslip/}"><i class="fa fa-circle-o"></i>
+					<li><a th:href="@{/issueslip/}"><i class="fa fa-circle-o"></i>
 							Material Issue Slip</a></li>
 				</ul></li>
 
