--- a/src/main/resources/templates/layouts/Master/issueSlip.html
+++ b/src/main/resources/templates/layouts/Master/issueSlip.html
@@ -94,7 +94,7 @@
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/issueSlip/}"
+											<form role="form" th:action="@{/issueslip/}"
 												th:object="${issueSlip}" method="POST">
 
 												<div class="box">
@@ -231,7 +231,7 @@
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Issued By</label> <select
 																class="form-control" id="employee" title="employee name"
-																th:field="*{issueDept}">
+																th:field="*{issuedBy}">
 																<option value="">Select</option>
 																<option th:each="employee :  ${employeeList}"
 																	th:text="${employee.empName}"
@@ -330,7 +330,7 @@
 																		<!-- stock detail  -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
-																			id="storeNAme0" title="item" required>
+																			id="storeNAme0" title="item">
 																				<option value="">Select</option>
 																				<!-- <option th:each="store :  ${storeList}"
 																					th:text="${store.description}"
@@ -340,7 +340,7 @@
 																		<!-- item code -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderItemDescription" title="description"></td>
+																			id="item0" title="description" readonly></td>
 																		<!-- item description  -->
 
 																		<td><select
@@ -354,35 +354,37 @@
 																		<!-- UOM -->
 																		<td><input type="text" id="uom0"
 																			class="form-control form-control-sm" title="net qty"
-																			name="issueSlipDetails[0].uom"></td>
+																			name="issueSlipDetails[0].uom" readonly></td>
 
 																		<!-- Qty Required  -->
-																		<td><input type="number"
+																		<td><input type="number" id="qtyRequired0"
 																			class="form-control form-control-sm" title="net qty"
-																			name="issueSlipDetails[0].qtyReq"></td>
+																			name="issueSlipDetails[0].qtyReq" step="0.25" value='0.00' readonly></td>
+																		
 																		<!-- Qty Issue   -->
-																		<td><input type="text"
+																		<td><input type="number"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="srNoClaimUnder"
-																			name="issueSlipDetails[0].qtyIssue"></td>
+																			id="qtyIssue0" step="0.25" title="srNoClaimUnder"
+																			name="issueSlipDetails[0].qtyIssue" value='0.00'></td>
+																	
 																		<!-- qty Issue Conversion  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderItemuom" title="" style="width: 150px"
-																			name="issueSlipDetails[0].qtyIssueConv"></td>
+																			id="issueConversion0" title="" step="0.25" style="width: 150px"
+																			name="issueSlipDetails[0].qtyIssueConv" readonly></td>
 
 																		<!-- qty in stock  -->
 
-																		<td><input type="text"
-																			class="form-control form-control-sm"
-																			id="orderItemuom" title="" style="width: 150px"></td>
+																		<td><input type="number"
+																			class="form-control form-control-sm"value='0.00'
+																			id="qtyInStock0" title="" step="0.25" style="width: 150px" readonly></td>
 
 
 																		<!-- issue rate  -->
-																		<td><input type="text"
-																			class="form-control form-control-sm"
-																			id="orderItemuom" title="" style="width: 150px"
-																			name="issueSlipDetails[0].issueRate"></td>
+																		<td><input type="number"
+																			class="form-control form-control-sm"value='0.00'
+																			id="issueRate0" title="" style="width: 150px"
+																			name="issueSlipDetails[0].issueRate" step="0.25"></td>
 
 
 																		<!-- lot No. -->
@@ -424,7 +426,7 @@
 										<!-- /.box -->
 										<div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/gatepass/list}">View All Gate-Pass</a>
+											<a th:href="@{/issueslip/list}">View All Issue Slip</a>
 										</div>
 									</div>
 
@@ -511,7 +513,7 @@
 
 											});
 
-							$('.itemContainer0').html(options);
+							$('.itemContainer'+idIndex).html(options);
 						},
 						error : function() {
 							console.log("Error");
@@ -522,9 +524,9 @@
 
 		function getItemInfo() {
 
-			var itemCode = document.getElementById("itemCode0").value;
+			var itemCode = document.getElementById("itemCode"+idIndex).value;
 			var reqNum = document.getElementById("reqNum").value;
-
+			document.getElementById("item"+idIndex).value = itemCode;
 			$.ajax({
 				type : "GET",
 				url : "iteminfo/againstreq/" + reqNum + "/" + itemCode,
@@ -538,9 +540,9 @@
 					console.log("qty required : " + data.materialRequisitionDetail.qtyRequired)
 					
 					console.log("qty in stock : " + data.itemOpening.currentStock)
-					//$("#reqDate").val(data.item.uom.uomCode);
-					//$("#departmentName").val(data.deptName)
-					//$("#departmentname").val(data.department.deptName)
+					$("#uom"+idIndex).val(data.materialRequisitionDetail.item.uom.uomCode);
+					$("#qtyRequired"+idIndex).val(data.materialRequisitionDetail.qtyRequired)
+					$("#qtyInStock"+idIndex).val(data.itemOpening.currentStock)
 
 				},
 				error : function() {
@@ -548,6 +550,50 @@
 				}
 			});
 
+		}
+		
+		
+		function getStoreList(){
+			
+			
+
+			$
+					.ajax({
+						type : "GET",
+						url : "storelist/",
+
+						success : function(data) {
+
+							console.log("response data : "
+									+ JSON.stringify(data));
+
+							//$("#reqDate").val(data.requisitionDate);
+							//$("#departmentName").val(data.deptName)
+							//$("#departmentname").val(data.department.deptName)
+
+							var options = '<option value=""><strong>Select Store</strong></option>';
+							$(data)
+									.each(
+											function(index, value) {
+
+												console.log("item info : "
+														+ value.storeCode)
+												console.log("item info : "
+														+ value.description)
+
+												options += '<option value="' + value.storeCode + '">'
+														+ value.description
+														+ '</option>';
+
+											});
+
+							$('.storeContainer'+idIndex).html(options);
+						},
+						error : function() {
+							console.log("Error");
+						}
+					});
+			
 		}
 
 		function selectEmployee() {
@@ -634,6 +680,8 @@
 
 
 	<script>
+	
+	var idIndex=0;
 		$(document)
 				.ready(
 						function() {
@@ -647,36 +695,49 @@
 
 												console
 														.log("add clickk function")
-												//idIndex2++;
-												$('#adr' + j)
+												idIndex++;
+												$('#addr' + j)
 														.html(
-																"<td><input type='number' title='sno.' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].srNo'></td>"
+																<!-- store description  -->
+																"<td><select class='form-control storeContainer"+j+" form-control-sm select'  id='storeNAme"+j+"' name='issueSlipDetails["+j+"].store' title='item' required>option value=''>Select</option><option th:each='store :  ${storeList}'  th:text='${store.description}' th:value=' ${store.storeCode}'></option></select></td>"
 
-																		+ "<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
+																<!-- stock detail  -->
+																		+ "<td><select class='form-control indentContainer form-control-sm select' id='storeNAme"+j+"' title='item'><option value=''>Select</option></select></td>"
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- item code -->
+																		+ "<td><input type='text' class='form-control form-control-sm' id='item"+j+"' title='description' readonly></td>" // Item Code
 
-																		+ "<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
+																		<!-- item description  -->
+																		+ "<td><select class='form-control itemContainer"+j+" form-control-sm select'id='itemCode"+j+"' name='issueSlipDetails["+j+"].item'title='item' onchange='getItemInfo()' required><option value=''>Select</option></select></td>"
 
-																		+ "<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
+																		<!-- UOM -->
+																		+ "<td><input type='text' id='uom"+j+"' class='form-control form-control-sm' title='net qty' name='issueSlipDetails["+j+"].uom' readonly></td>"
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- Qty Required  -->
+																		+ "<td><input type='number' id='qtyRequired"+j+"' class='form-control form-control-sm' title='net qty' name='issueSlipDetails["+j+"].qtyReq' step='0.25' value='0.00' readonly></td>" // Item Code
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- Qty Issue   -->
+																		+ "<td><input type='number' class='form-control form-control-sm' iid='qtyIssue"+j+"' step='0.25' title='srNoClaimUnder' name='issueSlipDetails["+j+"].qtyIssue' value='0.00' ></td>" // Item Code
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo'   style='width: 150px' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- qty Issue Conversion  -->
+																		+ "<td><input type='text' class='form-control form-control-sm' id='issueConversion"+j+"' title='' step='0.25' style='width: 150px' name='issueSlipDetails["+j+"].qtyIssueConv' readonly></td>" // Item Code
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' style='width: 150px' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- qty in stock  -->
+																		+ "<td><input type='number' class='form-control form-control-sm' id='qtyInStock"+j+"' title='' step='0.25' style='width: 150px' value='0.00' readonly></td>" // Item Code
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' style='width: 150px' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- issue rate  -->
+																		+ "<td><input type='number' class='form-control form-control-sm' id='issueRate"+j+"' title='' style='width: 150px' name='issueSlipDetails["+j+"].issueRate' step='0.25' value='0.00'></td>" // Item Code
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' style='width: 150px' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- lot No. -->
+																		+ "<td><input type='text' class='form-control form-control-sm' id='orderItemuom' title='' style='width: 150px' name='issueSlipDetails["+j+"].lotNo'></td>" // Item Code
 
 														);
 												$('#example').append(
 														'<tr id="adr' + (j + 1)
 																+ '"></tr>');
 
+												getStoreList()
+												getItemListAgainstReq()
 												//listOfSupplierInfo()
 
 												j++;
@@ -687,6 +748,7 @@
 								if (j > 1) {
 									$("#adr" + (j - 1)).html('');
 
+									idIndex--;
 									j--;
 
 								}
