--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,6 +44,15 @@
 			font-size: 10px;
 }
   
+  /*  my css  */
+  
+ .capitalize{
+ text-transform: capitalize;
+ }
+ 
+ .uppercase {
+	text-transform: uppercase;
+}
   
   
 
