--- a/src/main/resources/templates/layouts/Master/moduleMaster.html
+++ b/src/main/resources/templates/layouts/Master/moduleMaster.html
@@ -103,14 +103,14 @@
 														<label for="inputPassword4">Module Name</label><span
 															style="color: red">*</span> <input
 															title="This field is required" type="text"
-															class="form-control" placeholder="module name"
+															class="form-control" placeholder="Module Name"
 															th:field="*{moduleName}" required>
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputPassword4">Sequence Number</label><span
 															style="color: red">*</span> <input type="text"
 															class="form-control" title="This field is required"
-															placeholder="sequence number" th:field="*{seqNo}"
+															placeholder="Sequence Number" th:field="*{seqNo}"
 															required>
 													</div>
 
