--- a/src/main/resources/templates/layouts/editview/editCategory.html
+++ b/src/main/resources/templates/layouts/editview/editCategory.html
@@ -122,9 +122,9 @@
 
 
 										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										<!-- <div style="width: parent; text-align-last: right; margin:8px">
 											<a th:href="@{/category/list}">view category</a>
-										</div>
+										</div> -->
 									</div>
 
 
