--- a/src/main/resources/templates/layouts/editview/editFinancialyear.html
+++ b/src/main/resources/templates/layouts/editview/editFinancialyear.html
@@ -105,10 +105,9 @@
 
 
 
-													<label class="checkbox-inline">
-														<input type="radio" value="Y" name="inlineRadioOptions">Active
-														<input type="radio" value="N"
-															name="inlineRadioOptions">In-Active
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked>Active <input
+														type="radio" value="N" name="active">In-Active
 													</label>
 
 
