--- a/src/main/resources/templates/layouts/editview/editProgram.html
+++ b/src/main/resources/templates/layouts/editview/editProgram.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
 
@@ -49,16 +56,17 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
 											<form role="form" th:action="@{/program/}" method="POST"
 												th:object="${program}">
@@ -90,14 +98,14 @@
 
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Program Type</label> <input
-															type="text" class="form-control" placeholder="program type"
-															th:field="*{programType}">
+															type="text" class="form-control"
+															placeholder="program type" th:field="*{programType}">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Program Href</label> <input
-															type="text" class="form-control" placeholder="program href"
-															th:field="*{programHrefName}">
+															type="text" class="form-control"
+															placeholder="program href" th:field="*{programHrefName}">
 													</div>
 
 													<div class="form-group col-md-6">
@@ -107,40 +115,35 @@
 													</div>
 
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="Y">
-														<label class="form-check-label"
-															for="inlineRadio1">Active</label>
-													</div>
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="N">
-														<label class="form-check-label"
-															for="inlineRadio1">In-Active</label>
-													</div>
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked>Active <input
+														type="radio" value="N" name="active">In-Active
+													</label>
 
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+													<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 												</div>
 
 
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										</div>
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/program/list}">View All Program</a>
 										</div>
 									</div>
 
 
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 								</div>
 
 							</div>
@@ -149,16 +152,20 @@
 					</section>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
