--- a/src/main/resources/templates/layouts/editview/editUserMaster.html
+++ b/src/main/resources/templates/layouts/editview/editUserMaster.html
@@ -19,21 +19,18 @@
 <link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
 	th:href="@{/css/skins/_all-skins.min.css}">
 
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-	rel="stylesheet" />
 <script
-	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 <script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css"
-	rel="stylesheet">
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/js/bootstrap-datepicker.min.js"></script>
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
-
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -49,13 +46,9 @@
 					<!-- Content Header (Page header) -->
 					<section class="content-header">
 						<h4>
-							Financial Master
+							User Master
 							<!--<small>it all starts here</small>-->
 						</h4>
-
-
-
-
 						<ol class="breadcrumb">
 							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
 							<li><a href="#">Examples</a></li>
@@ -82,45 +75,51 @@
 										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
-
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
-
-
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/financialyear/}"
-												method="POST" th:object="${financialYear}">
-
-
-
-
+											<form id="userMasterForm" role="form" th:action="@{/user/}"
+												method="POST" th:object="${user}">
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">Financial Year Code</label> <input
-															type="text" class="form-control"
-															placeholder="Financial Year Code"
-															th:field="*{financialYearCode}"
-															title="financial year code" readonly>
+														<label>Employee</label> <label style="color: red">*</label>
+														<select class="form-control" title="Employee" required
+															th:field="*{employee}">
+															<option value="">Select</option>
+															<option th:each="employee :  ${listEmployee}"
+																th:text="${employee.empName}"
+																th:value=" ${employee.empCode}"></option>
+														</select>
 													</div>
 													<div class="form-group col-md-12">
-														<label for="inputPassword4">From (Date)</label><span
-															style="color: red">*</span> <input type="date"
-															class="form-control"
-															placeholder='From Date' title="This field is required"
-															th:field="*{fromDate}" required />
+														<label>User Code</label><span style="color: red">*</span>
+														<input type="text" id="userCode" name="userCode"
+															class="form-control" placeholder="User Code"
+															title="This field is required" th:field="*{userCode}"
+															required>
 													</div>
+
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">To (Date)</label><span
-															style="color: red">*</span> <input type="date"
-															class="form-control"
-															placeholder='To Date' title="This field is required"
-															th:field="*{toDate}" required />
+														<label for="inputEmail4">User Name</label><span
+															style="color: red">*</span> <input type="text"
+															class="form-control" placeholder="User Name"
+															title="This field is required" th:field="*{userName}"
+															required>
 													</div>
+
+
+													<div class="form-group col-md-12">
+														<label>User Password</label><span style="color: red">*</span>
+														<input type="password" class="form-control"
+															placeholder="User Password"
+															title="This field is required"  th:field="*{userPassword}"
+															required>
+													</div>
+
+
 
 
 
@@ -130,24 +129,13 @@
 													</label>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 												</div>
 												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="button" value="Go back!" class="btn btn-danger"
+														onclick="history.back()">
 												</div>
 
 
@@ -156,11 +144,10 @@
 
 										</div>
 										<!-- /.box -->
-										<div
+										<!-- <div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/financialyear/list}">View All Financial
-												Year</a>
-										</div>
+											<a th:href="@{/user/list}">View All User</a>
+										</div> -->
 									</div>
 
 
@@ -173,40 +160,20 @@
 					</section>
 				</section>
 			</div>
-
-
 		</div>
 	</div>
-
 	<div th:replace="fragments/footer :: footer">...</div>
 
 
 	<script>
-				$(document).ready(function () {
-
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
-						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
-				});
-
-
-				
-			</script>
+		$("#userMasterForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 	<!--   <section class="content">
         
         </section>-->
-	<script src="../../js/jQuery-2.1.4.min.js"
-		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<!--<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>-->
 	<script src="../../js/bootstrap.min.js"
 		th:src="@{/js/bootstrap.min.js}"></script>
 	<script src="../../js/fastclick.min.js"
