--- a/src/main/resources/templates/layouts/listview/listofUser.html
+++ b/src/main/resources/templates/layouts/listview/listofUser.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -42,43 +49,47 @@
 									<form role="form">
 										<div class="box-body">
 											<div class="table-responsive-sm">
-									<table class="table table-striped" style="width: 80%">
-										<thead>
-											<tr>
-												<th scope="col">#</th>
-												<th scope="col">User Code</th>
-												<th scope="col">User Name</th>
-												<th scope="col">Employee</th>
-												
-												<th scope="col">Status</th>
-												<th scope="col">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr th:each="user,iter  : ${listMyUser}">
-												<td th:text="${iter.index}">1</td>
-												<td th:text="${user.userCode}">Garrett Winters</td>
-												<td th:text="${user.userName}">Garrett Winters</td>
-												<td th:text="${user.employee.empName}">Garrett Winters</td>
-												
+												<table class="table table-striped" style="width: 80%">
+													<thead>
+														<tr>
+															<th scope="col">#</th>
+															<th scope="col">User Code</th>
+															<th scope="col">User Name</th>
+															
 
-												<td><span class="badge bg-success"
-													>Active</span></td>
-
-												<td><span> <a th:href="@{/user/edit/{id}(id=${user.userCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span> <a
-														th:href="@{/user/delete/{id}(id=${user.userCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span></td>
-											</tr>
+															<th scope="col">Status</th>
+															<th scope="col">Action</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:each="user,iter  : ${listMyUser}">
+															<td th:text="${iter.index}">1</td>
+															<td th:text="${user.userCode}">Garrett Winters</td>
+															<td th:text="${user.userName}">Garrett Winters</td>
+														
 
 
+															<td><span class="badge bg-success">Active</span></td>
+
+															<td><span> <a
+																	th:href="@{/user/edit/{id}(id=${user.userCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a th:href="@{/user/delete/{id}(id=${user.userCode})}"><em
+																		class="fa fa-times" style="color: red"> Remove</em></a></a>
+															</span></td>
+														</tr>
 
 
-										</tbody>
-									</table>
-								</div>
+
+
+													</tbody>
+												</table>
+											</div>
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -92,16 +103,20 @@
 					</div>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
