--- a/src/main/resources/templates/layouts/listview/listofmodulemaster.html
+++ b/src/main/resources/templates/layouts/listview/listofmodulemaster.html
@@ -2,15 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -48,7 +55,7 @@
 															<th scope="col">#</th>
 															<th scope="col">Module Code</th>
 															<th scope="col">Module Name</th>
-															
+
 															<th scope="col">Status</th>
 															<th scope="col">Action</th>
 														</tr>
@@ -58,18 +65,20 @@
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${module.moduleCode}">Garrett Winters</td>
 															<td th:text="${module.moduleName}">Garrett Winters</td>
-															
 
-															<td th:if="${module.active =='Y'}"><span class="badge bg-success"
-																	>&nbsp;&nbsp;Active&nbsp;&nbsp;</span></td>
-															<td th:if="${module.active =='N'}"><span class="badge bg-success"
-																	>In-Active</span></td>
+
+															<td th:if="${module.active =='Y'}"><span
+																class="badge bg-success">&nbsp;&nbsp;Active&nbsp;&nbsp;</span></td>
+															<td th:if="${module.active =='N'}"><span
+																class="badge bg-success">In-Active</span></td>
 
 															<td><span> <a
-																		th:href="@{/module/edit/{id}(id=${module.moduleCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
-																<span> <a
-																		th:href="@{/module/delete/{id}(id=${module.moduleCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
-															</td>
+																	th:href="@{/module/edit/{id}(id=${module.moduleCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a
+																	th:href="@{/module/delete/{id}(id=${module.moduleCode})}"><em
+																		class="fa fa-times" style="color: red"> Remove</em></a></a>
+															</span></td>
 														</tr>
 
 
@@ -80,7 +89,8 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -94,16 +104,20 @@
 					</div>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
