--- a/src/main/resources/templates/layouts/listview/listofstore.html
+++ b/src/main/resources/templates/layouts/listview/listofstore.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -47,10 +54,13 @@
 														<tr>
 															<th scope="col">#</th>
 															<th scope="col">Store Code</th>
-															<th scope="col">Status</th>
+
 															<th scope="col">Type</th>
 															<th scope="col">Location</th>
 															<th scope="col">Description</th>
+
+															<th scope="col">Status</th>
+
 															<th scope="col">Action</th>
 
 														</tr>
@@ -59,16 +69,27 @@
 														<tr th:each="store,iter  : ${storeList}">
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${store.storeCode}">Garrett Winters</td>
-															<td th:text="${store.StoreStatus}">Garrett Winters</td>
-															<td th:text="${store.storeType}">Garrett Winters</td>
+														
+															<td th:if="${store.storeType}=='S' ">Store</td>
+															<td th:if="${store.storeType}=='G' ">Godown</td>
+															
+															
 															<td th:text="${store.location}">Garrett Winters</td>
 															<td th:text="${store.description}">Garrett Winters</td>
 
+															<td th:if="${store.active=='Y' }"><span
+																class="badge rounded-pill bg-primary">Active</span></td>
+
+															<td th:if="${store.active=='N' }"><span class="badge rounded-pill bg-warning">In Active</span></td>
+
+
 															<td><span> <a
-																		th:href="@{/store/edit/{id}(id=${store.storeCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
-																<span> <a
-																		th:href="@{/store/delete/{id}(id=${store.storeCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
-															</td>
+																	th:href="@{/store/edit/{id}(id=${store.storeCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a
+																	th:href="@{/store/delete/{id}(id=${store.storeCode})}"><em
+																		class="fa fa-times" style="color: red"> Remove</em></a>
+															</span></td>
 														</tr>
 
 
@@ -78,12 +99,11 @@
 												</table>
 											</div>
 
-
-											<div class="row" style="margin: 10px">
-												<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
-											</div>
-
-
+										</div>
+										<div class="row" style="margin: 10px">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
+										</div>
 									</form>
 								</div>
 							</div>
@@ -95,16 +115,20 @@
 					</div>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
